--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ TYPE html>
 </div>
 </body>
   <div class="topnav">
-    <a href="https://example.com/galeria" target="_blank">Galería</a>
+    <a href="https://jurks1.github.io/link-despues-del-formulario/" target="_blank">Galería</a>
     <a href="#sabores">Sabores</a>
     <a href="#precios">Precios</a>
    
