--- a/index.html
+++ b/index.html
@@ -1,27 +1,52 @@
+
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     * {
       box-sizing: border-box;
     }
+
     body {
-      font-family: Arial;
-      padding: 10px;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
       background: #000000;
     }
+
     .header {
       padding: 30px;
       text-align: center;
-      background: rgb(0, 0, 0);
+      background-image: url('img/Pastelería.jpg');
+      background-size: cover;
+      background-position: center;
+      position: relative;
+      height: 400px;
     }
+
+    .header-content {
+      background: rgba(0, 0, 0, 0.6);
+      color: white;
+      padding: 20px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 80%;
+      text-align: center;
+    }
+
     .header h1 {
       font-size: 50px;
+      margin: 0;
     }
+
     .topnav {
       overflow: hidden;
       background-color: #3b3b3b;
     }
+
     .topnav a {
       float: left;
       display: block;
@@ -30,140 +55,96 @@
       padding: 14px 16px;
       text-decoration: none;
     }
+
     .topnav a:hover {
       background-color: #ddd;
       color: black;
     }
+
+    .row {
+      display: flex;
+      flex-wrap: wrap;
+    }
+
     .leftcolumn {
-      float: left;
-      width: 75%;
+      flex: 75%;
+      padding: 15px;
     }
+
     .rightcolumn {
-      float: left;
-      width: 25%;
+      flex: 25%;
+      padding: 15px;
       background-color: #525252;
-      padding-left: 20px;
     }
-    .fakeimg {
-      background-color: #000000;
-      width: 100%;
-      padding: 20px;
-    }
+
     .card {
       background-color: rgb(255, 251, 24);
       padding: 20px;
       margin-top: 20px;
+      border-radius: 8px;
     }
-    .row::after {
-      content: "";
-      display: table;
-      clear: both;
-    }
+
     .footer {
       padding: 20px;
       text-align: center;
       background: #525252;
+      color: white;
       margin-top: 20px;
     }
+
     @media screen and (max-width: 800px) {
       .topnav a {
         float: none;
         width: 100%;
       }
+
+      .row {
+        flex-direction: column;
+      }
+
+      .leftcolumn, .rightcolumn {
+        flex: 100%;
+      }
+    }
+
+    @media screen and (max-width: 500px) {
+      .header h1 {
+        font-size: 30px;
+      }
+
+      .header-content {
+        width: 100%;
+        padding: 10px;
+      }
     }
   </style>
 </head>
-<style>
-        * {
-            box-sizing: border-box;
-        }
-        body {
-            font-family: Arial;
-            padding: 10px;
-            background: #000000;
-        }
-        .header {
-            padding: 30px;
-            text-align: center;
-            background-image: url('img/Pastelería.jpg');
-            background-size: cover;
-            background-position: center;
-            position: relative;
-            height: 400px;
-        }
-        .header-content {
-            background: rgba(0, 0, 0, 0.6); 
-            color: rgb(22, 22, 22);
-            padding: 20px;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 80%;
-        }
-        .header h1 {
-            font-size: 50px;
-        }
-    </style>
-</head>
-<style>
-    * {
-        box-sizing: border-box;
-    }
-    body {
-        font-family: Arial;
-        padding: 10px;
-        background: #525252;
-    }
-    .header {
-        padding: 30px;
-        text-align: center;
-        background-image: url('img/Pastelería.jpg');
-        background-size: cover;
-        background-position: center;
-        position: relative;
-        height: 400px;
-    }
-    .header-content {
-        background: rgba(0, 0, 0, 0.6); 
-        color: white;
-        padding: 20px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 80%;
-    }
-    .header h1 {
-        font-size: 50px;
-    }
-</style>
-</head>
 <body>
-<div class="header">
+  <div class="header">
     <div class="header-content">
-        <h1>Pastelería "Dulce Mordida"</h1>
-        <p>Pasteles personalizados para cada ocasión especial.</p>
+      <h1>Pastelería "Dulce Mordida"</h1>
+      <p>Pasteles personalizados para cada ocasión especial.</p>
     </div>
-</div>
-</body>
+  </div>
+
   <div class="topnav">
     <a href="https://jurks1.github.io/galer-a/">Galería</a>
     <a href="#sabores">Sabores</a>
     <a href="#precios">Precios</a>
-   
   </div>
 
   <div class="row">
     <div class="leftcolumn">
       <div class="card" id="galeria">
         <h2>Algunos de nuestros pasteles</h2>
-        <div class="vainilla"  style="height:200px;"> <a href="img/Vainilla clasica.jpg">Vainilla clásica</a>
+        <div class="vainilla" style="height:200px;">
+          <a href="img/Vainilla clasica.jpg">Vainilla clásica</a>
         </div>
-        <div class="red_velvet" style="height:200px;"><a href="img/Red Velvet.jpg">Red_velvet</a></div>
-        
-       
+        <div class="red_velvet" style="height:200px;">
+          <a href="img/Red Velvet.jpg">Red Velvet</a>
+        </div>
       </div>
+
       <div class="card" id="sabores">
         <h2>Opciones de Sabores</h2>
         <p>Ofrecemos una amplia variedad de sabores que incluyen:</p>
@@ -175,6 +156,7 @@
           <li>Fresa Cremosa</li>
         </ul>
       </div>
+
       <div class="card" id="precios">
         <h2>Precios Estimados</h2>
         <p>Precios aproximados según el tamaño y la personalización del pastel:</p>
@@ -192,12 +174,13 @@
         <p>Para realizar un pedido, llena el siguiente formulario:</p>
         <form action="https://jurks1.github.io/link-despues-del-formulario/">
           <label for="nombre">Nombre:</label><br>
-          <input type="text" id="nombre" name="nombre"><br><br>
+          <input type="text" id="nombre" name="nombre" required><br><br>
+
           <label for="telefono">Teléfono:</label><br>
-          <input type="tel" id="telefono" name="telefono"><br><br>
-          <label for="email">Correo Electrónico:</label>
-<input type="email" id="email" name="email" placeholder="Ingresa tu correo electrónico" required>
-<br><br>
+          <input type="tel" id="telefono" name="telefono" required><br><br>
+
+          <label for="email">Correo Electrónico:</label><br>
+          <input type="email" id="email" name="email" required><br><br>
 
           <label for="sabor">Sabor del Pastel:</label>
           <select id="sabor" name="sabor">
@@ -207,11 +190,14 @@
             <option value="limon">Limón con Frutos del Bosque</option>
             <option value="fresa">Fresa Cremosa</option>
           </select><br><br>
+
           <label for="mensaje">Mensaje Personalizado:</label><br>
           <textarea id="mensaje" name="mensaje" rows="4" cols="30"></textarea><br><br>
+
           <input type="submit" value="Enviar Pedido">
         </form>
       </div>
+
       <div class="card">
         <h3>Síguenos en Redes Sociales</h3>
         <p><a href="https://facebook.com/dulcemordida">Facebook</a></p>
@@ -221,7 +207,7 @@
   </div>
 
   <div class="footer">
-    <h2>Contacto: info@dulcemordida.com</h2>
+    <p>&copy; 2024 Pastelería Dulce Mordida. Todos los derechos reservados.</p>
   </div>
 </body>
 </html>
