--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
       <div class="card">
         <h3>Síguenos en Redes Sociales</h3>
-        <p><a href="https://facebook.com/dulcemordida">Facebook</a></p>
+        <p><a href="https://www.facebook.com/profile.php?id=61570068645874&mibextid=ZbWKwL">Facebook</a></p>
         <p><a href="https://instagram.com/dulcemordida">Instagram</a></p>
       </div>
     </div>
