--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       <div class="card">
         <h3>Síguenos en Redes Sociales</h3>
         <p><a href="https://www.facebook.com/profile.php?id=61570068645874&mibextid=ZbWKwL">Facebook</a></p>
-        <p><a href="https://instagram.com/dulcemordida">Instagram</a></p>
+        <p><a href="https://www.instagram.com/dulcemordida53/profilecard/?igsh=MXVscmE0cjRrbWp5Mg==">Instagram</a></p>
       </div>
     </div>
   </div>
