--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       <div class="card" id="pedidos">
         <h2>Formulario de Pedidos</h2>
         <p>Para realizar un pedido, llena el siguiente formulario:</p>
-        <form action="https://example.com/submit_pedido">
+        <form action="https://jurks1.github.io/link-despues-del-formulario/">
           <label for="nombre">Nombre:</label><br>
           <input type="text" id="nombre" name="nombre"><br><br>
           <label for="telefono">Teléfono:</label><br>
