--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 </div>
 </body>
   <div class="topnav">
-    <a href="https://jurks1.github.io/galer-a/" target="_blank">Galería</a>
+    <a href="https://jurks1.github.io/galer-a/">Galería</a>
     <a href="#sabores">Sabores</a>
     <a href="#precios">Precios</a>
    
