--- a/index.html
+++ b/index.html
@@ -5,23 +5,43 @@
     * {
       box-sizing: border-box;
     }
+
     body {
       font-family: Arial;
       padding: 10px;
-      background: #000000;
+      background: #525252;
     }
+
     .header {
       padding: 30px;
       text-align: center;
-      background: rgb(0, 0, 0);
+      background-image: url('img/Pastelería.jpg');
+      background-size: cover;
+      background-position: center;
+      position: relative;
+      height: 400px;
     }
+
+    .header-content {
+      background: rgba(0, 0, 0, 0.6); 
+      color: white;
+      padding: 20px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 80%;
+    }
+
     .header h1 {
       font-size: 50px;
     }
+
     .topnav {
       overflow: hidden;
       background-color: #3b3b3b;
     }
+
     .topnav a {
       float: left;
       display: block;
@@ -30,114 +50,102 @@
       padding: 14px 16px;
       text-decoration: none;
     }
+
     .topnav a:hover {
       background-color: #ddd;
       color: black;
     }
+
+    .row {
+      display: flex;
+      flex-wrap: wrap;
+      margin: 0 -10px;
+    }
+
+    .leftcolumn, .rightcolumn {
+      padding: 10px;
+    }
+
     .leftcolumn {
-      float: left;
-      width: 75%;
+      flex: 3;
     }
+
     .rightcolumn {
-      float: left;
-      width: 25%;
+      flex: 1;
       background-color: #525252;
-      padding-left: 20px;
     }
-    .fakeimg {
-      background-color: #000000;
-      width: 100%;
-      padding: 20px;
-    }
+
     .card {
       background-color: rgb(255, 251, 24);
       padding: 20px;
       margin-top: 20px;
+      border-radius: 5px;
     }
-    .row::after {
-      content: "";
-      display: table;
-      clear: both;
+
+    .thumbnail {
+      width: 100%;
+      cursor: pointer;
+      border-radius: 5px;
     }
+
+    /* Modal CSS */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0, 0, 0, 0.9);
+    }
+
+    .modal-content {
+      margin: auto;
+      display: block;
+      width: 80%;
+      max-width: 700px;
+    }
+
+    .modal-content:hover {
+      transform: scale(1.05);
+    }
+
+    .close {
+      position: absolute;
+      top: 20px;
+      right: 35px;
+      color: white;
+      font-size: 40px;
+      font-weight: bold;
+      transition: 0.3s;
+      cursor: pointer;
+    }
+
+    .close:hover, .close:focus {
+      color: #bbb;
+    }
+
     .footer {
       padding: 20px;
       text-align: center;
       background: #525252;
       margin-top: 20px;
+      color: white;
     }
+
     @media screen and (max-width: 800px) {
+      .row {
+        flex-direction: column;
+      }
+
       .topnav a {
         float: none;
         width: 100%;
       }
     }
   </style>
-</head>
-<style>
-        * {
-            box-sizing: border-box;
-        }
-        body {
-            font-family: Arial;
-            padding: 10px;
-            background: #000000;
-        }
-        .header {
-            padding: 30px;
-            text-align: center;
-            background-image: url('img/Pastelería.jpg');
-            background-size: cover;
-            background-position: center;
-            position: relative;
-            height: 400px;
-        }
-        .header-content {
-            background: rgba(0, 0, 0, 0.6); 
-            color: rgb(22, 22, 22);
-            padding: 20px;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 80%;
-        }
-        .header h1 {
-            font-size: 50px;
-        }
-    </style>
-</head>
-<style>
-    * {
-        box-sizing: border-box;
-    }
-    body {
-        font-family: Arial;
-        padding: 10px;
-        background: #525252;
-    }
-    .header {
-        padding: 30px;
-        text-align: center;
-        background-image: url('img/Pastelería.jpg');
-        background-size: cover;
-        background-position: center;
-        position: relative;
-        height: 400px;
-    }
-    .header-content {
-        background: rgba(0, 0, 0, 0.6); 
-        color: white;
-        padding: 20px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 80%;
-    }
-    .header h1 {
-        font-size: 50px;
-    }
-</style>
 </head>
 <body>
 <div class="header">
@@ -146,79 +154,104 @@
         <p>Pasteles personalizados para cada ocasión especial.</p>
     </div>
 </div>
-</body>
-  <div class="topnav">
-    <a href="https://jurks1.github.io/galer-a/" target="_blank">Galería</a>
-    <a href="#sabores">Sabores</a>
-    <a href="#precios">Precios</a>
-   
-  </div>
 
-  <div class="row">
-    <div class="leftcolumn">
-      <div class="card" id="galeria">
-        <h2>Algunos de nuestros pasteles</h2>
+<div class="topnav">
+  <a href="https://jurks1.github.io/galer-a/" target="_blank">Galería</a>
+  <a href="#sabores">Sabores</a>
+  <a href="#precios">Precios</a>
+</div>
 
-      
-      </div>
-      <div class="card" id="sabores">
-        <h2>Opciones de Sabores</h2>
-        <p>Ofrecemos una amplia variedad de sabores que incluyen:</p>
-        <ul>
-          <li>Vainilla Clásica</li>
-          <li>Chocolate Oscuro</li>
-          <li>Red Velvet</li>
-          <li>Limón con Frutos del Bosque</li>
-          <li>Fresa Cremosa</li>
-        </ul>
-      </div>
-      <div class="card" id="precios">
-        <h2>Precios Estimados</h2>
-        <p>Precios aproximados según el tamaño y la personalización del pastel:</p>
-        <ul>
-          <li>Pastel Pequeño (8 porciones): $300 MXN</li>
-          <li>Pastel Mediano (15 porciones): $550 MXN</li>
-          <li>Pastel Grande (25 porciones): $800 MXN</li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="rightcolumn">
-      <div class="card" id="pedidos">
-        <h2>Formulario de Pedidos</h2>
-        <p>Para realizar un pedido, llena el siguiente formulario:</p>
-        <form action="https://jurks1.github.io/link-despues-del-formulario/">
-          <label for="nombre">Nombre:</label><br>
-          <input type="text" id="nombre" name="nombre"><br><br>
-          <label for="telefono">Teléfono:</label><br>
-          <input type="tel" id="telefono" name="telefono"><br><br>
-          <label for="email">Correo Electrónico:</label>
-<input type="email" id="email" name="email" placeholder="Ingresa tu correo electrónico" required>
-<br><br>
-
-          <label for="sabor">Sabor del Pastel:</label>
-          <select id="sabor" name="sabor">
-            <option value="vainilla">Vainilla Clásica</option>
-            <option value="chocolate">Chocolate Oscuro</option>
-            <option value="red_velvet">Red Velvet</option>
-            <option value="limon">Limón con Frutos del Bosque</option>
-            <option value="fresa">Fresa Cremosa</option>
-          </select><br><br>
-          <label for="mensaje">Mensaje Personalizado:</label><br>
-          <textarea id="mensaje" name="mensaje" rows="4" cols="30"></textarea><br><br>
-          <input type="submit" value="Enviar Pedido">
-        </form>
+<div class="row">
+  <div class="leftcolumn">
+    <div class="card" id="galeria">
+      <h2>Algunos de nuestros pasteles</h2>
+      <div class="card">
+        <h2>Vainilla</h2>
+        <img src="img/vanilla clasica.jpg" alt="Pastel de Vainilla" class="thumbnail" onclick="showModal('img/vanilla clasica.jpg')">
       </div>
       <div class="card">
-        <h3>Síguenos en Redes Sociales</h3>
-        <p><a href="https://www.facebook.com/profile.php?id=61570068645874&mibextid=ZbWKwL">Facebook</a></p>
-        <p><a href="https://www.instagram.com/dulcemordida53/profilecard/?igsh=MXVscmE0cjRrbWp5Mg==">Instagram</a></p>
+        <h2>Red Velvet</h2>
+        <img src="img/red velvet.jpg" alt="Pastel Red Velvet" class="thumbnail" onclick="showModal('img/red velvet.jpg')">
       </div>
     </div>
   </div>
-
-  <div class="footer">
-    <h2>Contacto: info@dulcemordida.com</h2>
+  
+  <div class="rightcolumn">
+    <div class="card" id="pedidos">
+      <h2>Formulario de Pedidos</h2>
+      <form action="https://jurks1.github.io/link-despues-del-formulario/">
+        <label for="nombre">Nombre:</label><br>
+        <input type="text" id="nombre" name="nombre"><br><br>
+        <label for="telefono">Teléfono:</label><br>
+        <input type="tel" id="telefono" name="telefono"><br><br>
+        <label for="email">Correo Electrónico:</label><br>
+        <input type="email" id="email" name="email" placeholder="Ingresa tu correo electrónico" required><br><br>
+        <label for="sabor">Sabor del Pastel:</label>
+        <select id="sabor" name="sabor">
+          <option value="vainilla">Vainilla Clásica</option>
+          <option value="chocolate">Chocolate Oscuro</option>
+          <option value="red_velvet">Red Velvet</option>
+          <option value="limon">Limón con Frutos del Bosque</option>
+          <option value="fresa">Fresa Cremosa</option>
+        </select><br><br>
+        <input type="submit" value="Enviar Pedido">
+      </form>
+    </div>
   </div>
+</div>
+
+<div id="modal" class="modal">
+  <span class="close" onclick="closeModal()">&times;</span>
+  <img class="modal-content" id="modalImage">
+</div>
+
+
+
+<script>
+  function showModal(imageSrc) {
+    var modal = document.getElementById('modal');
+    var modalImage = document.getElementById('modalImage');
+    modal.style.display = "block";
+    modalImage.src = imageSrc;
+  }
+
+  function closeModal() {
+    var modal = document.getElementById('modal');
+    modal.style.display = "none";
+  }
+</script>
+<div class="card" id="sabores">
+  <h2>Opciones de Sabores</h2>
+  <p>Ofrecemos una amplia variedad de sabores que incluyen:</p>
+  <ul>
+    <li>Vainilla Clásica</li>
+    <li>Chocolate Oscuro</li>
+    <li>Red Velvet</li>
+    <li>Limón con Frutos del Bosque</li>
+    <li>Fresa Cremosa</li>
+  </ul>
+</div>
+<div class="card" id="precios">
+  <h2>Precios Estimados</h2>
+  <p>Precios aproximados según el tamaño y la personalización del pastel:</p>
+  <ul>
+    <li>Pastel Pequeño (8 porciones): $300 MXN</li>
+    <li>Pastel Mediano (15 porciones): $550 MXN</li>
+    <li>Pastel Grande (25 porciones): $800 MXN</li>
+  </ul>
+</div>
+</div>
+
+
+<div class="card">
+  <h3>Síguenos en Redes Sociales</h3>
+  <p><a href="https://www.facebook.com/profile.php?id=61570068645874&mibextid=ZbWKwL">Facebook</a></p>
+  <p><a href="https://www.instagram.com/dulcemordida53/profilecard/?igsh=MXVscmE0cjRrbWp5Mg==">Instagram</a></p>
+</div>
+</div>
+</div>
+<div class="footer">
+  <h2>Contacto: info@dulcemordida.com</h2>
+</div>
 </body>
 </html>
